sort.basic.lessons.sort.basic.insertion.AlgInsertionSort.scala.error
AlgInsertionSort:5: error: reassignment to val
	while (echange_pos=true){
                          ^AlgInsertionSort:6: error: reassignment to val
    echange_pos=false
               ^AlgInsertionSort:11: error: reassignment to val
        echange_pos=true
                   ^